[package]
name = "bfn"
description = "BPS PG Tools"
version = "2.0.1"
edition = "2021"
readme = "readme.md"

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[[bin]]
name = "pgrx_embed_bfn"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg16"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg_test = []

[dependencies]
pgrx = "=0.12.9"
base64 = "0.22.1"
md5 = "0.7.0"
regex = "1.11.1"
uuid = { version = "1.12.1", features = ["v7", "v4"] }
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
toml = "0.8.14"
chrono = "0.4.39"

[dev-dependencies]
pgrx-tests = "=0.12.9"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(pgrx_embed)", "cfg(feature,values(\"pg12\",\"pg15\",\"pg17\"))"] }